# hookshoter

./: Cargo.toml  Makefile  README.md
.github/workflows/: release.yml
docs/: API.md  BACKUP_RESTORE.md  CONFIGURATION.md  DEPLOYMENT.md  QUICKSTART.md  TROUBLESHOOTING.md
examples/: config.toml  secrets.env.example  services.toml
examples/backup/: backup-cron.sh
examples/backup/systemd-timer/: README.md  hookshot-backup.service  hookshot-backup.timer
examples/github-actions/: README.md  deploy.yml
examples/gitlab-ci/: .gitlab-ci.yml  README.md
examples/systemd/: hookshot-tmpfiles.conf  hookshot.service
specs/: PROJECT.md
src/: cli.rs  error.rs  logging.rs  main.rs  metrics.rs  types.rs
src/backup/: mod.rs
src/config/: mod.rs  types.rs  validators.rs
src/deployment/: healthcheck.rs  mod.rs  rollback.rs
src/execution/: executor.rs  mod.rs  templates.rs
src/http/: handlers.rs  mod.rs  responses.rs  server.rs
src/http/middleware/: auth.rs  ip_allowlist.rs  mod.rs  rate_limit.rs
src/notifications/: discord.rs  mod.rs  sender.rs
src/secrets/: loader.rs  manager.rs  mod.rs  storage.rs
src/state/: concurrency.rs  filelock.rs  mod.rs
src/tasks/: mod.rs
