[package]
name = "hookshot"
version = "1.0.0"
edition = "2024"
authors = ["Mohamed Hamdi <haamdi@outlook.com>"]
description = "Lightweight deployment webhook receiver"
license = "MPL-2.0"

[profile.release]
opt-level = 3        # Highest optimization level (speed)
lto = "thin"
codegen-units = 1    # Better optimization across crate boundaries
strip = true         # Remove debug symbols (smaller binary, faster load)
panic = "abort"      # Smaller binary, faster unwinding

[dependencies]
# CLI and argument parsing
clap = { version = "4.5", features = ["derive"] }

# Web framework
axum = "0.8"
hyper = { version = "1.0", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "compression-full", "decompression-full", "timeout", "limit"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "time", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }

# Configuration
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.9"

# Validation
regex = "1.10"
validator = "0.20.0"

# Async traits
async-trait = "0.1"

# Database
redb = "3.0"

# File locking
fs2 = "0.4"

# Security and cryptography
secrecy = { version = "0.8", features = ["alloc", "serde"] }
chacha20poly1305 = "0.10"
rand = "0.8"
zeroize = "1.7"
region = "3.0.2"
parking_lot = "0.12"
libc = "0.2"
ring = "0.17"
constant_time_eq = "0.3"
hex = "0.4"

# IP filtering and rate limiting
ipnet = "2.9"

# Template processing
handlebars = "6"

# Resource management
scopeguard = "1.2"

# HTTP client for notifications
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "http2"] }

# Metrics and monitoring
prometheus = "0.13"
lazy_static = "1.4"
dashmap = "6.0"

# Build system
shadow-rs = { version = "1.3", default-features = false, features = ["git2"] }

# Backup and restore
tar = "0.4"
flate2 = "1.0"
sha2 = "0.10"
tempfile = "3.8"


[build-dependencies]
shadow-rs = "1.3"

[dev-dependencies]
tempfile = "3.8"
http-body-util = "0.1"
